fixed chat button on mobile

--- a/css/sharpay2.webflow.css
+++ b/css/sharpay2.webflow.css
@@ -1401,10 +1401,134 @@ img.flag {
   z-index: 10;
 }
 
-/* #advisers {
-  display: none;
-} */
+body {
+	-webkit-backface-visibility: hidden;
+	-webkit-font-smoothing: antialiased !important;
+	font-smoothing: antialiased !important;
+}
 
+.highcharts-text-outline {
+    display: none
+}
+
+.highcharts-credits {
+    opacity: 0
+}
+
+/**
+ *	This element is created inside your target element
+ *	It is used so that your own element will not need to be altered
+ **/
+.time_circles {
+    position: relative;
+    width: 100%;
+    height: 100%;
+}
+
+/**
+ *	This is all the elements used to house all text used
+ * in time circles
+ **/
+.time_circles > div {
+    position: absolute;
+    text-align: center;
+}
+
+/**
+ *	Titles (Days, Hours, etc)
+ **/
+.time_circles > div > h4 {
+    margin: 0px;
+    padding: 0px;
+    text-align: center;
+    text-transform: uppercase;
+    font-family: 'Century Gothic', Arial;
+}
+/**
+ *	Time numbers, ie: 12
+ **/
+.time_circles > div > span {
+    display: block;
+    width: 100%;
+    text-align: center;
+    font-family: 'Century Gothic', Arial;
+    font-size: 300%;
+    margin-top: 0.4em;
+    font-weight: bold;
+}
+
+/*********/
+
+.progress-sale {
+	width: 100%;
+	max-width: 555px;
+	margin-top: 80px;
+
+}
+
+.sales-wrap {
+	width: 30%;
+	margin-left: 70%;
+	text-align: right;
+	min-width: 157px;
+	margin-top: 10px;
+}
+
+.btn-sale {
+	background-color: #1e9a1e;
+	box-shadow: 0 1px 24px 0 rgba(34,172,34,.5);
+	padding: 12px 20px 13px;
+	border: 2px solid #1e9a1e;
+	border-radius: 80px;
+	color: #fff;
+	line-height: 17px;
+	font-weight: 700;
+	text-align: center;
+	text-decoration: none;
+	font-size: 14px;
+	display: inline-block;
+	width: 147px;
+}
+
+.btn-sale:hover {
+	box-shadow: none;
+}
+
+.progress-wrap {
+	width: 70%;
+	float: left;
+	font-size: 13px;
+}
+
+.progress {
+	background-color: #fafafa;
+	border-radius: 80px;
+	position: relative;
+	margin: 10px 0 0;
+}
+
+.progress span {
+	width: 100%;
+    display: block;
+    text-align: center;
+    color: #373737;
+    position: absolute;
+    top: 13px;
+	font-weight: bold;
+	padding-right: 5px;
+	font-size: 14px;
+}
+
+.progress-bar {
+	background-color: #1e9a1e;
+	text-align: right;
+	border-radius: 80px 0 0 80px;
+	padding: 5px;
+	background-image: linear-gradient(315deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
+	background-size: 2rem 2rem;
+	box-shadow: 0 1px 24px 0 rgba(34,172,34,.5);
+	height: 46px;
+}
 
 @media (min-width:1280px) {
     .h1 {
@@ -1502,7 +1626,6 @@ img.flag {
     }
 
 }
-
 
 @media only screen and (max-width:1152px) and (min-width:991px) {
     .body {
@@ -2009,6 +2132,18 @@ img.flag {
     .container-head {
       margin-top: 15px;
     }
+
+    .btn {
+        width: 85px;
+        margin-right: 10px;
+        padding-bottom: 10px;
+        font-size: 12px;
+        line-height: 16px
+    }
+    
+    .progress-sale {
+      margin-top: 60px;
+    }
 }
 
 @media (max-width:767px) {
@@ -2053,13 +2188,6 @@ img.flag {
         line-height: 22px
     }
 
-    .btn {
-        width: 135px;
-        margin-right: 10px;
-        padding-bottom: 10px;
-        font-size: 12px;
-        line-height: 16px
-    }
 
     .h-form-title {
         margin-top: 40px;
@@ -2459,6 +2587,23 @@ img.flag {
     .show768 {
         display: block
     }
+
+  	.sales-wrap {
+  		width: 100%;
+  		margin-left: 0;
+  		margin-top: 20px;
+  	}
+
+  	.progress-wrap {
+  		width: 100%;
+  		float: none;
+  	}
+
+  	.btn-sale {
+  		margin: 0 auto;
+  		width: 100%;
+  		display: block;
+  	}
 }
 
 @media (max-width:479px) {
@@ -2533,7 +2678,9 @@ img.flag {
     }
 
     .h-form-title {
-        margin-top: 20px
+        margin-top: 20px;
+        margin-bottom: 20px;
+        text-align: center;
     }
 
     .form-block {
@@ -2921,145 +3068,4 @@ img.flag {
     justify-content: center;
   }
 
-}
-
-body {
-	-webkit-backface-visibility: hidden;
-	-webkit-font-smoothing: antialiased !important;
-	font-smoothing: antialiased !important;
-}
-
-.highcharts-text-outline {
-    display: none
-}
-
-.highcharts-credits {
-    opacity: 0
-}
-
-/**
- *	This element is created inside your target element
- *	It is used so that your own element will not need to be altered
- **/
-.time_circles {
-    position: relative;
-    width: 100%;
-    height: 100%;
-}
-/**
- *	This is all the elements used to house all text used
- * in time circles
- **/
-.time_circles > div {
-    position: absolute;
-    text-align: center;
-}
-/**
- *	Titles (Days, Hours, etc)
- **/
-.time_circles > div > h4 {
-    margin: 0px;
-    padding: 0px;
-    text-align: center;
-    text-transform: uppercase;
-    font-family: 'Century Gothic', Arial;
-}
-/**
- *	Time numbers, ie: 12
- **/
-.time_circles > div > span {
-    display: block;
-    width: 100%;
-    text-align: center;
-    font-family: 'Century Gothic', Arial;
-    font-size: 300%;
-    margin-top: 0.4em;
-    font-weight: bold;
-}
-
-/*********/
-
-.progress-sale {
-	width: 100%;
-	max-width: 555px;
-	margin-top: 80px;
-
-}
-.sales-wrap {
-	width: 30%;
-	margin-left: 70%;
-	text-align: right;
-	min-width: 157px;
-	margin-top: 10px;
-}
-.btn-sale {
-	background-color: #1e9a1e;
-	box-shadow: 0 1px 24px 0 rgba(34,172,34,.5);
-	padding: 12px 20px 13px;
-	border: 2px solid #1e9a1e;
-	border-radius: 80px;
-	color: #fff;
-	line-height: 17px;
-	font-weight: 700;
-	text-align: center;
-	text-decoration: none;
-	font-size: 14px;
-	display: inline-block;
-	width: 147px;
-}
-.btn-sale:hover {
-	box-shadow: none;
-}
-.progress-wrap {
-	width: 70%;
-	float: left;
-	font-size: 13px;
-}
-.progress {
-	background-color: #fafafa;
-	border-radius: 80px;
-	position: relative;
-	margin: 10px 0 0;
-}
-.progress span {
-	width: 100%;
-    display: block;
-    text-align: center;
-    color: #373737;
-    position: absolute;
-    top: 13px;
-	font-weight: bold;
-	padding-right: 5px;
-	font-size: 14px;
-}
-.progress-bar {
-	background-color: #1e9a1e;
-	text-align: right;
-	border-radius: 80px 0 0 80px;
-	padding: 5px;
-	background-image: linear-gradient(315deg,rgba(255,255,255,.15) 25%,transparent 25%,transparent 50%,rgba(255,255,255,.15) 50%,rgba(255,255,255,.15) 75%,transparent 75%,transparent);
-	background-size: 2rem 2rem;
-	box-shadow: 0 1px 24px 0 rgba(34,172,34,.5);
-	height: 46px;
-}
-
-@media (max-width:767px) {
-	.sales-wrap {
-		width: 100%;
-		margin-left: 0;
-		margin-top: 20px;
-	}
-	.progress-wrap {
-		width: 100%;
-		float: none;
-	}
-	.btn-sale {
-		margin: 0 auto;
-		width: 100%;
-		display: block;
-	}
-	
-	.h-btns .w-inline-block:last-child {
-		display: none;
-	}
 }
